fix collapsing leftnav
- add fixed width to nav container for .gateway-nav

--- a/client/less/gateway.less
+++ b/client/less/gateway.less
@@ -14,6 +14,8 @@
 }
 
 [data-id="MainNavContainer"].gateway-nav {
+  width: 28.5rem;
+
   .ia-nav-item-contextmenu-icon-container-col {
     position: relative;
   }
